--- a/package.json
+++ b/package.json
@@ -4,5 +4,8 @@
   "main": "index.js",
   "repository": "https://github.com/kellermartin13/JavascriptProblems.git",
   "author": "Keller Martin <kmartin@appriss.com>",
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {
+    "jest": "^26.6.3"
+  }
 }
