--- a/package.json
+++ b/package.json
@@ -5,6 +5,9 @@
   "repository": "https://github.com/kellermartin13/JavascriptProblems.git",
   "author": "Keller Martin <kmartin@appriss.com>",
   "license": "MIT",
+  "scripts": {
+    "test": "jest"
+  },
   "dependencies": {
     "jest": "^26.6.3"
   }
